<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/relativeLayout4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/relativeLayout4"
        android:background="@color/my_background">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/item_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/reg"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/item_citta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/item_reg"
            android:layout_centerHorizontal="true"
            android:text="@string/citta"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorAccent" />

        <RelativeLayout
            android:id="@+id/rel_valutaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/item_valutaz"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleView"
            android:layout_width="90dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:background="@color/my_background"
            android:src="@drawable/imgstand" />

    </RelativeLayout>
</RelativeLayout>
